add_subdirectory(ButtonDesktopExample)
add_subdirectory(ComboBoxDesktopExample)
add_subdirectory(FileBrowserDesktopExample)
add_subdirectory(HelloWorldDesktopExample)
add_subdirectory(MDIDesktopExample)
add_subdirectory(Render2DExample)
add_subdirectory(SliderDesktopExample)
add_subdirectory(SplitterDesktopExample)
