add_subdirectory(djvCore)
add_subdirectory(djvAV)
add_subdirectory(djvScene)
add_subdirectory(djvUI)
if(NOT DJV_BUILD_TINY)
    add_subdirectory(djvCmdLineApp)
    add_subdirectory(djvDesktopApp)
    add_subdirectory(djvUIComponents)
    add_subdirectory(djvViewApp)
endif()
if(DJV_PYTHON)
    add_subdirectory(djvCorePy)
    if(NOT DJV_BUILD_TINY)
        add_subdirectory(djvCmdLineAppPy)
        add_subdirectory(djvDesktopAppPy)
        add_subdirectory(djvUIPy)
        add_subdirectory(djvViewAppPy)
    endif()
endif()

