add_subdirectory(djvCore)
add_subdirectory(djvAV)
add_subdirectory(djvScene)
add_subdirectory(djvUI)
if (DJV_BUILD_TINY)
elseif(DJV_BUILD_MINIMAL)
    add_subdirectory(djvCmdLineApp)
    add_subdirectory(djvDesktopApp)
else()
    add_subdirectory(djvCmdLineApp)
    add_subdirectory(djvDesktopApp)
    add_subdirectory(djvUIComponents)
    add_subdirectory(djvViewApp)
endif()
if(DJV_PYTHON)
    add_subdirectory(djvCorePy)
    if (DJV_BUILD_TINY)
    elseif(DJV_BUILD_MINIMAL)
        add_subdirectory(djvCmdLineAppPy)
        add_subdirectory(djvDesktopAppPy)
    else()
        add_subdirectory(djvCmdLineAppPy)
        add_subdirectory(djvDesktopAppPy)
        add_subdirectory(djvUIPy)
        add_subdirectory(djvViewAppPy)
    endif()
endif()

