add_subdirectory(djvAV)
add_subdirectory(djvAudio)
add_subdirectory(djvCore)
add_subdirectory(djvGL)
add_subdirectory(djvGeom)
add_subdirectory(djvImage)
add_subdirectory(djvMath)
add_subdirectory(djvOCIO)
add_subdirectory(djvRender2D)
add_subdirectory(djvRender3D)
add_subdirectory(djvScene3D)
add_subdirectory(djvSystem)
add_subdirectory(djvUI)
if(DJV_BUILD_TINY)
elseif(DJV_BUILD_MINIMAL)
    add_subdirectory(djvCmdLineApp)
    add_subdirectory(djvDesktopApp)
else()
    add_subdirectory(djvCmdLineApp)
    add_subdirectory(djvDesktopApp)
    add_subdirectory(djvUIComponents)
    add_subdirectory(djvViewApp)
endif()
#if(DJV_PYTHON)
#    add_subdirectory(djvCorePy)
#    if (DJV_BUILD_TINY)
#    elseif(DJV_BUILD_MINIMAL)
#        add_subdirectory(djvCmdLineAppPy)
#        add_subdirectory(djvDesktopAppPy)
#    else()
#        add_subdirectory(djvCmdLineAppPy)
#        add_subdirectory(djvDesktopAppPy)
#        add_subdirectory(djvUIPy)
#        add_subdirectory(djvViewAppPy)
#    endif()
#endif()

