add_subdirectory(djvAVTest)
add_subdirectory(djvCoreTest)
add_subdirectory(djvTest)
add_subdirectory(djvTestLib)
add_subdirectory(djvUITest)
if(NOT DJV_BUILD_TINY)
    add_subdirectory(GLFWTest)
    add_subdirectory(Render2DStressTest)
endif()
if(DJV_PYTHON)
    add_subdirectory(djvCorePyTest)
endif()

