add_subdirectory(djvAVTest)
add_subdirectory(djvCoreTest)
add_subdirectory(djvTest)
add_subdirectory(djvTestLib)
add_subdirectory(djvUITest)
if(DJV_BUILD_TINY)
elseif(DJV_BUILD_MINIMAL)
else()
    add_subdirectory(djvViewAppTest)
    add_subdirectory(GLFWTest)
    add_subdirectory(Render2DStressTest)
endif()
if(DJV_PYTHON)
    add_subdirectory(djvCorePyTest)
endif()
