add_subdirectory(djvAVTest)
add_subdirectory(djvAudioTest)
add_subdirectory(djvCoreTest)
add_subdirectory(djvGLTest)
add_subdirectory(djvGeomTest)
add_subdirectory(djvImageTest)
add_subdirectory(djvMathTest)
add_subdirectory(djvOCIOTest)
add_subdirectory(djvRender2DTest)
add_subdirectory(djvRender3DTest)
add_subdirectory(djvSystemTest)
add_subdirectory(djvTest)
add_subdirectory(djvTestLib)
add_subdirectory(djvUITest)
if(DJV_BUILD_TINY)
elseif(DJV_BUILD_MINIMAL)
else()
    add_subdirectory(djvViewAppTest)
    add_subdirectory(GLFWTest)
    add_subdirectory(Render2DStressTest)
endif()
#if(DJV_PYTHON)
#    add_subdirectory(djvCorePyTest)
#endif()

