set(SAMPLE_DATA
    BART_2021-02-07.0001.png
    BART_2021-02-07.0002.png
    BART_2021-02-07.0003.png
    BART_2021-02-07.0004.png
    BART_2021-02-07.0005.png
    BART_2021-02-07.0006.png
    BART_2021-02-07.0007.png
    BART_2021-02-07.0008.png
    BART_2021-02-07.0009.png
    BART_2021-02-07.0010.png
    BART_2021-02-07.0011.png
    BART_2021-02-07.0012.png
    BART_2021-02-07.0013.png
    BART_2021-02-07.0014.png
    BART_2021-02-07.0015.png
    BART_2021-02-07.0016.png
    BART_2021-02-07.0017.png
    BART_2021-02-07.0018.png
    BART_2021-02-07.0019.png
    BART_2021-02-07.0020.png
    BART_2021-02-07.0021.png
    BART_2021-02-07.0022.png
    BART_2021-02-07.0023.png
    BART_2021-02-07.0024.png
    BART_2021-02-07.0025.png
    BART_2021-02-07.0026.png
    BART_2021-02-07.0027.png
    BART_2021-02-07.0028.png
    BART_2021-02-07.0029.png
    BART_2021-02-07.0030.png
    BART_2021-02-07.0031.png
    BART_2021-02-07.0032.png
    BART_2021-02-07.0033.png
    BART_2021-02-07.0034.png
    BART_2021-02-07.0035.png
    BART_2021-02-07.0036.png
    BART_2021-02-07.0037.png
    BART_2021-02-07.0038.png
    BART_2021-02-07.0039.png
    BART_2021-02-07.0040.png
    BART_2021-02-07.0041.png
    BART_2021-02-07.0042.png
    BART_2021-02-07.0043.png
    BART_2021-02-07.0044.png
    BART_2021-02-07.0045.png
    BART_2021-02-07.0046.png
    BART_2021-02-07.0047.png
    BART_2021-02-07.0048.png
    BART_2021-02-07.0049.png
    BART_2021-02-07.0050.png
    BART_2021-02-07.0051.png
    BART_2021-02-07.0052.png
    BART_2021-02-07.0053.png
    BART_2021-02-07.0054.png
    BART_2021-02-07.0055.png
    BART_2021-02-07.0056.png
    BART_2021-02-07.0057.png
    BART_2021-02-07.0058.png
    BART_2021-02-07.0059.png
    BART_2021-02-07.0060.png
    BART_2021-02-07.0061.png
    BART_2021-02-07.0062.png
    BART_2021-02-07.0063.png
    BART_2021-02-07.0064.png
    BART_2021-02-07.0065.png
    BART_2021-02-07.0066.png
    BART_2021-02-07.0067.png
    BART_2021-02-07.0068.png
    BART_2021-02-07.0069.png
    BART_2021-02-07.0070.png
    BART_2021-02-07.0071.png
    BART_2021-02-07.0072.png
    BART_2021-02-07.0073.png
    BART_2021-02-07.0074.png
    BART_2021-02-07.0075.png
    BART_2021-02-07.0076.png
    BART_2021-02-07.0077.png
    BART_2021-02-07.0078.png
    BART_2021-02-07.0079.png
    BART_2021-02-07.0080.png
    BART_2021-02-07.0081.png
    BART_2021-02-07.0082.png
    BART_2021-02-07.0083.png
    BART_2021-02-07.0084.png
    BART_2021-02-07.0085.png
    BART_2021-02-07.0086.png
    BART_2021-02-07.0087.png
    BART_2021-02-07.0088.png
    BART_2021-02-07.0089.png
    BART_2021-02-07.0090.png
    BART_2021-02-07.wav
    Counter.0.png
    Counter.1.png
    Counter.2.png
    Counter.3.png
    Counter.4.png
    Counter.5.png
    Counter.6.png
    Counter.7.png
    Counter.8.png
    Counter.9.png)

install(
    FILES ${SAMPLE_DATA}
    DESTINATION etc/SampleData)
