set(SAMPLE_DATA
    BART_2021-02-07.0000.jpg
    BART_2021-02-07.0001.jpg
    BART_2021-02-07.0002.jpg
    BART_2021-02-07.0003.jpg
    BART_2021-02-07.0004.jpg
    BART_2021-02-07.0005.jpg
    BART_2021-02-07.0006.jpg
    BART_2021-02-07.0007.jpg
    BART_2021-02-07.0008.jpg
    BART_2021-02-07.0009.jpg
    BART_2021-02-07.0010.jpg
    BART_2021-02-07.0011.jpg
    BART_2021-02-07.0012.jpg
    BART_2021-02-07.0013.jpg
    BART_2021-02-07.0014.jpg
    BART_2021-02-07.0015.jpg
    BART_2021-02-07.0016.jpg
    BART_2021-02-07.0017.jpg
    BART_2021-02-07.0018.jpg
    BART_2021-02-07.0019.jpg
    BART_2021-02-07.0020.jpg
    BART_2021-02-07.0021.jpg
    BART_2021-02-07.0022.jpg
    BART_2021-02-07.0023.jpg
    BART_2021-02-07.0024.jpg
    BART_2021-02-07.0025.jpg
    BART_2021-02-07.0026.jpg
    BART_2021-02-07.0027.jpg
    BART_2021-02-07.0028.jpg
    BART_2021-02-07.0029.jpg
    BART_2021-02-07.0030.jpg
    BART_2021-02-07.0031.jpg
    BART_2021-02-07.0032.jpg
    BART_2021-02-07.0033.jpg
    BART_2021-02-07.0034.jpg
    BART_2021-02-07.0035.jpg
    BART_2021-02-07.0036.jpg
    BART_2021-02-07.0037.jpg
    BART_2021-02-07.0038.jpg
    BART_2021-02-07.0039.jpg
    BART_2021-02-07.0040.jpg
    BART_2021-02-07.0041.jpg
    BART_2021-02-07.0042.jpg
    BART_2021-02-07.0043.jpg
    BART_2021-02-07.0044.jpg
    BART_2021-02-07.0045.jpg
    BART_2021-02-07.0046.jpg
    BART_2021-02-07.0047.jpg
    BART_2021-02-07.0048.jpg
    BART_2021-02-07.0049.jpg
    BART_2021-02-07.0050.jpg
    BART_2021-02-07.0051.jpg
    BART_2021-02-07.0052.jpg
    BART_2021-02-07.0053.jpg
    BART_2021-02-07.0054.jpg
    BART_2021-02-07.0055.jpg
    BART_2021-02-07.0056.jpg
    BART_2021-02-07.0057.jpg
    BART_2021-02-07.0058.jpg
    BART_2021-02-07.0059.jpg
    BART_2021-02-07.0060.jpg
    BART_2021-02-07.0061.jpg
    BART_2021-02-07.0062.jpg
    BART_2021-02-07.0063.jpg
    BART_2021-02-07.0064.jpg
    BART_2021-02-07.0065.jpg
    BART_2021-02-07.0066.jpg
    BART_2021-02-07.0067.jpg
    BART_2021-02-07.0068.jpg
    BART_2021-02-07.0069.jpg
    BART_2021-02-07.0070.jpg
    BART_2021-02-07.0071.jpg
    BART_2021-02-07.0072.jpg
    BART_2021-02-07.0073.jpg
    BART_2021-02-07.0074.jpg
    BART_2021-02-07.0075.jpg
    BART_2021-02-07.0076.jpg
    BART_2021-02-07.0077.jpg
    BART_2021-02-07.0078.jpg
    BART_2021-02-07.0079.jpg
    BART_2021-02-07.0080.jpg
    BART_2021-02-07.0081.jpg
    BART_2021-02-07.0082.jpg
    BART_2021-02-07.0083.jpg
    BART_2021-02-07.0084.jpg
    BART_2021-02-07.0085.jpg
    BART_2021-02-07.0086.jpg
    BART_2021-02-07.0087.jpg
    BART_2021-02-07.0088.jpg
    BART_2021-02-07.0089.jpg
    BART_2021-02-07.wav
    Counter.0.png
    Counter.1.png
    Counter.2.png
    Counter.3.png
    Counter.4.png
    Counter.5.png
    Counter.6.png
    Counter.7.png
    Counter.8.png
    Counter.9.png)

install(
    FILES ${SAMPLE_DATA}
    DESTINATION etc/SampleData)
